--- a/changelog.txt
+++ b/changelog.txt
@@ -1,1 +1,578 @@
+Проект Sygnal_1_380 на микроконтроллере STM32F070
+
+n1_27_08_2022 - реализация кода охранной сигнализации. 
+Входные сигналы - два дискретных сигнала:
+- состояние датчика (открыто/закрыто)
+- управление сигнализацией (вкл./откл.)
+Выходные сигналы - два дискретных сигнала:
+- светодиод
+- бузер
+
+После проверки пофиксил баги.
+n2_30_08_2022
+
+n3_01_09_2022
+1.Изменены сигналы Имп.1 и Имп.2 до длительности 150 мСек (было в задании 250 мСек).
+2.После сброса проверяется состояние сигнала /SEC. Если сигнал активен, переходим в режим охраны.
+3.После включения охраны при закрытой двери, сразу переходим в охрану.
+4.После включения охраны при открытой двери включается сигнализация. Ждем, когда дверь закроется или выключения охраны. Когда дверь закрылась, переходим в охрану. Если выключить - охрана выключается.  
+5.В режиме охраны ждем выключения охраны или открывания двери. При выключении охраны - выключаем её, при открывании двери переходим в таймер тревоги.
+
+n4_05_09_2022
+ Изменения в пункте 3. При постановке на охрану с закрытой дверью, ждем открывания двери, потом ждем закрывания двери и переходим в охрану.
+
+n5_08_09_2022
+ Добавлен код для зарядного устройства.
+
+n5-1_09_09_2022
+ В коде зарядного устройства, для проверки, изменены два таймера: Tzu4=5 min (вместо 24 hour), Tzu5=15 min (вместо 72 hour).
+
+n6_16_09_2022
+ Обновлен код зарядного устройства, Uак6 = 8 В.
+
+n6-1_16_09_2022
+ Для отладки изменены таймеры: Tzu4=3 min (вместо 24 hour), Tzu5=9 min (вместо 72 hour).
+
+n6-2_20_09_2022
+ Изменен расчет температуры (от датчика NTC-4k7). Добавлена инициализация регистров.
+ Есть команды для переключения значений таймеров Tzu4 и Tzu5.
+ Команда "0х80 0х04" включает короткие таймера, Tzu4 - 3 мин., Tzu5 - 9 мин.
+ Команда "0х80 0х06" включает длинные таймера, Tzu4 - 24 час., Tzu5 - 72 час.
+
+n6-3_22_09_2022
+ Добавлены три отладочные команды для управления выключением зарядного узла.
+ Также, при сборке прошивки зарядный узел все время включен и не выключается.
+ Команда "0х80 0х08" включает зарядный узел и не выключает его.
+ Команда "0х80 0х10" разрешает коду управление (вкл./выкл.) зарядным узлом
+ Команда "0х80 0х11" выводит информацию с именем устройства и с установленными параметрами:
+ время таймеров Tzu4, Tzu5 и управление зарядным узлом, текущее напряжение аккумуляторной батареи.
+
+n6-4_26_09_2022
+ Добавлены отладочные комментарии для удобного отслеживания поведения зарядного устройства.
+
+n6-5_27_09_2022
+ Пороговое напряжение наличия электросети установлено 14 В, вместо 14,5 В.
+ Исправлено поведение таимеров 3, 4, 5. В состоянии "Авария батареи" они останавливаются.
+ Исправлено поведение программы по таймерам Тзу3 и Тзу5. Заряд батареи включается, если батарея не тестируется и не заряжена (Ubat < Uak2).
+ Оставлены три тестовые команды:
+ Команда "0х80 0х04" включает короткие таймера, Tzu4 - 3 мин., Tzu5 - 9 мин.
+ Команда "0х80 0х06" включает длинные таймера, Tzu4 - 24 час., Tzu5 - 72 час.
+ Команда "0х80 0х11" выводит информацию с именем устройства и с установленными параметрами:
+ время таймеров Tzu4, Tzu5 и текущее напряжение аккумуляторной батареи.
+
+n6-6_28_09_2022
+ Настроена работа таймеров зарядного устройства. Изменены параметры тестовых команд.
+ Команда "0х80 0хА4" включает короткие таймера, Tzu4 - 3 мин., Tzu5 - 9 мин.
+ Команда "0х80 0хА6" включает длинные таймера, Tzu4 - 24 час., Tzu5 - 72 час.
+ Команда "0х80 0х11" выводит информацию с именем устройства и с установленными параметрами:
+ время таймеров Tzu4, Tzu5 и текущее напряжение аккумуляторной батареи.
+
+n6-7_30_09_2022
+ Исправлена ошибка поведения алгоритма, после N-циклов предзаряда и недостаточного напряжения батареи - уходим в аварию.
+
+n7_10_10_2022
+ Очередная сборка. Подключены регистры, чтение и запись в них. UART1 и 2 работают 9600,8,1,no. UART3 - 115200,8,1,no.
+ Данные по настройке последовательных портов не ещё изменяются. 
+ Не определена процедура индивидуальной настройки входных/выходных линий.
+
+n7-1_12_10_2022
+ Скорость портов устанавливается из регистров. Применяется после последующего рестарта устройства.
+ Запись в регистры выполняется согласно статуса Чтение/Запись (в регистры для чтения запись не выполняется).
+ Не определена процедура индивидуальной настройки входных/выходных линий.
+
+n7-2_18_10_2022
+ Добавлена запись данных в архив, 24С256.
+ Подключены команды ModBus 0х03, 0х04, 0х06, 0х10, 0х11.
+ Установлены таймера: Tzu4 - 24 час., Tzu5 - 72 час.
+ Изменение параметров работают через регистры.
+ Исправлено поведение зарядного устройства по окончанию таймера Tzu5.
+ В этой сборке выводится отладочный лог зарядного устройства в порт UART_1.
+
+n7-3_19_10_2022
+ Реализована процедура индивидуальной настройки входов и выходов через регистры.
+ Доступны команды ModBus 0х03, 0х04, 0х06, 0x08, 0х10, 0х11, 0х17.
+ Выполнено практически всё задание, за исключением чтения архива.
+ Отладочный лог выводится по работе с шиной ModBus.
+
+n7-4_22_10_2022, n7-5_22_10_2022
+ Выполнено чтение архива. При использовании всего пространства 24С256, получилось 4000 записей.
+ Время обработки запроса от ПИ382 составляет 5 секунд, т.е. после отправки команды от платы
+ индикации нужно ждать 5 сек. до получения ответа. Если использовать, напрмер 250 записей, то 
+ задержка уменьшается в 10 раз (до 0,5 сек). Я приготовил 2 сборки:
+ n7-4_22_10_2022 - с памятью на 250 записей,
+ n7-5_22_10_2022 - с памятью на 4000 записей.
+ Для большей наглядности.
+ В сборку добавлена отладочная команда, позволяющяя включать/выключать отладочный лог.
+ По умолчанию вывод лога включен. После сброса устройства выводятся сообщения лога.
+ 01 АА 00 00 CRC - выключает вывод лога,
+ 01 АА 00 01 CRC - включает вывод.
+ 
+n7-6_26_10_2022
+ Сборка с правкой зарядного устройства. Используется все пространство 24С256, 4000 записей, обработка запроса 5 секунд.
+ В сборке есть отладочная команда, позволяющяя управлять отладочным логом.
+ По умолчанию вывод лога выключен. После сброса устройства лог выключен.
+ 01 АА 00 00 CRC - выключает вывод лога,
+ 01 АА 00 01 CRC - включает вывод лога BUS,
+ 01 АА 00 02 CRC - включает вывод лога ZU.
+
+n7-7_31_10_2022
+ Исправлено поведение устройства по входной линии D8. Сигнал обрабатывается только в охранной сигнализации 
+ в качестве датчика открытой/закрытой двери. При изменении уровня сигнала (высокий/низкий) в регистрах нет изменений. 
+ При срабатывании охранной сигнализации изменения  фиксируются. 
+ Используется все пространство 24С256, 4000 записей, обработка запроса 5 секунд.
+ В сборке есть отладочная команда, позволяющяя управлять отладочным логом.
+ По умолчанию вывод лога от зарядного устройства.
+ 01 АА 00 00 CRC - выключает вывод лога,
+ 01 АА 00 01 CRC - включает вывод лога BUS,
+ 01 АА 00 02 CRC - включает вывод лога ZU (по умолчанию).
+ Также есть отладочная команда, которая выводит некоторые параметры текущего состояния устройства и список событий архива.
+ адрес(8bit),команда(8bit),год(16bit),месяц(16bit),день(16bit),CRC(16bit).
+ 01 A4 00 16 00 0A 00 1F CRC
+
+n7-8_02_11_2022
+ В этой сборке таймера Tzu4 и Tzu5 настроены как минутные. Значения, записанные в соответствующий регистр считаются как минуты.
+ Для 24 часов значение будет -> 1440, для 72 часов -> 4320. Максимальное значение (65535 минут) будет соответствовать 1092 часам.
+ Также изменен счет таймеров Tzu3, Tzu4, Tzu5. Счет происходит только в режиме заряда и хранения батареи.
+ Отладочные команды и настройка вывода лога как и в предыдущей версии (n7-7).
+
+n7-9_03_11_2022
+ Данная сборка отличается от предыдущей версии (n7-8) переходом алгоритма по таймеру Tzu5. Сейчас происходит безусловный
+ переход в заряд, если напряжение батареи выше порога Uak5 (9,5 вольт). В предыдущей версии переход выполнялся
+ по текущему состоянию, т.е. если был заряд - переходили в заряд, если было хранение - оставались в хранении.
+ Тестовые команды для записи/чтения EEPROM 24C256
+ Пространство адресов ячеек памяти для работы с архивом: 0х0000 - 0х7FF0.
+ С адреса 0х7FF1 по адрес 0x7FFF располагается служебная информация (счетчик текущей ячейки для записи).
+ Чтение и запись памяти происходит через порт UART#1 устройства. Выполнен преходником с USB-mini разъемом.
+ Чтение или запись выполняются блоками по 32 байта. Возможно любое значение до 32.
+ Для чтения подается команда A6.
+ адрес(8bit), команда(8bit), адрес ячейки памяти(16bit), число считываемых байт(16bit), CRC(16bit).
+ 01 A6 00 00 00 20 CRC
+ Для записи подается команда A8.
+ адрес(8bit), команда(8bit), адрес ячейки памяти(16bit), число записываемых байт(16bit), массив байт для записи [], CRC(16bit).
+ 01 A8 00 00 00 02 11 22 CRC
+
+n8-0_05_11_2022
+ В предыдущей версии (n7-9) проявился баг, таймер Tzu2 (для теста батареи) считал меньше установленного значения.
+ Проявлялся при наличии питания от сетевого источника напряжения, после подключения батареи.
+ В данной версии баг устранен.
+ В этой сборке таймера Tzu4 и Tzu5 настроены как минутные.
+ Добавлена опция очистки архива. 
+ Добавлена опция сброса к настройкам по умолчанию.
+ По умолчанию вывод лога от зарядного устройства.
+ 01 АА 00 00 CRC - выключает вывод лога,
+ 01 АА 00 01 CRC - включает вывод лога BUS,
+ 01 АА 00 02 CRC - включает вывод лога ZU (по умолчанию).
+
+n8-1_08_11_2022
+ В этой сборке таймера Tzu4 и Tzu5 настроены как часовые, согласно тех. заданию.
+ По умолчанию вывод лога по шине ModBus.
+ 01 АА 00 00 CRC - выключает вывод лога,
+ 01 АА 00 01 CRC - включает вывод лога BUS (по умолчанию включен),
+ 01 АА 00 02 CRC - включает вывод лога ZU.
+ Есть отладочная команда А4, которая выводит некоторые параметры текущего состояния устройства и список событий архива.
+ Год, месяц и число вводятся шестнадцатиричным числом, например числу 10 соответствует число 0х0А и т.д. 
+ Год вводится коротким значением, например короткое значение 2022 года - число 22, 
+ также вводится шестнадцатиричным числом (0х16). 
+ адрес(8bit),команда(8bit),год(16bit),месяц(16bit),день(16bit),CRC(16bit).
+    01           A4          00 16       00 0В       00 08        CRC
+
+n8-3_14_11_2022
+ Сборка полностью соответствует n8-1, но скорость шины I2C - 400 КГц. Раньше была 100 КГц.
+
+n8-4_17_11_2022
+ 1.Устранено замечание по задержке на срабатывание по дискретным входам.
+ 2.Авария "Низкое напряжение БП" появляется только когда напряжение на выходе БП есть и оно ниже порога Ubp1. 
+ Если напряжения нет по причине  отсутствия питающей фазы (Faza1), то авария не выводится.
+ 3.Авария "Чередование фаз" появляется только если есть в наличии все фазы, если нет хотя бы одной, то авария не выводится. 
+ Если было нарушено чередование, а потом возникла авария "Нет фазы Х", то чередование переходит в память.
+ 4.Исправлены параметры по умолчанию, "Задержка на сработку" - 2 сек, "Порог исправности БП"-14В, "Гистерезис БП" - 1 В.
+
+n8-5_18_11_2022
+ 1.Устранены замечания по значениям для аварий термодатчика и добавления по изменению в ТЗ, по 8-ми пунктам от 17/11/2022.
+
+n8-6_20_11_2022
+ Изменен порядок записи при настройке входных и выходных каналов. 
+ Первая поступившая команда конфигурации (применения настроек) выполняется последней. 
+ Таким образом, сначала записываются команды с данными настроек, а затем выполняется команда применения настроек.
+ Исправлена ошибка для отрицательного значения уставки нижнего температурного порога.
+ Добавлено управление по флагу для нижнего температурного порога. 
+ Дополненна обработка сигналов последовательности/наличия импульсов фаз питающего напряжения.
+
+n8-7_22_11_2022
+ 1.Настройки для дискретных входов, чередования фаз и датчика температуры применяются на лету. 
+ 2.Если не было аварии по дискретному входу, при изменении настройки НЗ, НО на противоположную-появляется авария.
+ 3.Если была авария при изменении настройки по дискретному входу НО, НЗ или Нет, она пропадает и устанавливается 
+   соответствующий бит в памяти аварий.
+ 4.Если параметр CТ1=1, тогда выполняется контроль датчика замерзания и при выполнении условий авария AT1 появляется.
+ 5.Исправлена ошибка соответсвия фаз "А" и "С".
+
+n8-8_23_11_2022
+ Выполнена оптимизация алгоритма определения наличия и последовательности фаз электропитания.
+
+n8-9_30_11_2022
+ 1.При включении от АКБ (без подключения к електросети) дискретные входы не проверяются, пока тестируется батарея. 
+   Это исключает появление аварий при отсутствии питания +12 вольт, поскольку к нему подключена "подтяжка" дискретных входов. 
+   Обработка аварий начинается после включения реле ЗУ и появления +12 вольт. 
+   Для случая, когда подключение к электросети есть, обработка аварий начинается сразу.
+ 2.Появление аварий происходит через программируемую задержку, а пропадание аварий происходит сразу. 
+ 3.Отключен звук тревоги охранной сигнализации на ПП380, осталась лишь светодиодная индикация тревоги.
+
+n8_10_01_12_2022
+ 1.Выставляется 7 бит (Охоронна тревога) в регистре DI при переходе в тревогу охранной сигнализации.
+   При снятии с охраны либо постановке на охрану, бит переходит в регистр DIM.
+ 2.По датчику сети, после отсутствия всех трех фаз и возникновении аварии "нет электропитания", если появляется любая из фаз, 
+   две любые фазы, или все три, авария "нет электропитания" переходит в память аварий.
+   По отсутствующим фазам возникают аварии (нет фазы Х).
+
+n8-11_02_2022
+ 1.Исправлена логика постановки в охрану после отключения питания. До этого тумблер постановки был в приоретете.
+   Теперь состояния регистра и тумблера равны по приоритету.
+ 2.Добавлены аварийные переключения по пеисправностям аккумуляторной батареи. Реализована такая логика:
+   - при напряжении батареи 0...0,5 вольт - аккумулятор не подключен (АК2);
+   - при напряжении батареи 0,6...8,0 вольт (Ubak6) - авария аккумулятора (АК3);
+   - при напряжении батареи 8,1...11,0 вольт (Uak6...Uak7) - аккумулятор разряжен (АК1).
+
+n8-12_07_12_2022
+ 1.Обаботка тумблера охранной сигнализации происходит по изменению состояния. До этого была по лог. уровню.
+   При изменении состояния тумбрера устанавливается/снимается бит в регистре управления охранной сигнализацией.
+ 2.После переподключения питания устройства при "Тревоге", устройство остается в "Тревоге". 
+   Раньше - переходило в охрану. Изменена последовательность инициализации компонентов программы.
+   Сперва инициализируются регистры, затем охранная сигнализация.
+
+n9-0_12_12_2022
+ 1.Добавлена обработка ошибок ModBus с выдачей квитанции об ошибке.
+ 2.Исправлена обработка команды "прокрутка" для чтения архива.
+ 3.Изменен порядок записи событий архива. Текущему событию соответствует меньший адрес, чем предыдущему. 
+ 4.Добавлено логгирование команд для чтения архива.
+
+n9-1_14_12_2022
+ Добавлено управление битами регистров di2, dim2 по состоянию зарядного устройства.
+
+n9-2_21_12_2022
+Доработан встроенный датчик ЗУ.
+Добавлены дополнительные команды для принудительного оконнчания работы таймеров Tzu3, Tzu4 и Tzu5.
+ 01 A0 00 03  41 fb  - команда для сброса таймера Tzu3
+ 01 A0 00 04  00 39  - команда для сброса таймера Tzu4
+ 01 A0 00 05  c1 f9  - команда для сброса таймера Tzu5
+
+n9-3_24_12_2022
+Исправлено поведение аварий датчика ЗУ.
+Доработаны дискретные выходы. 
+
+n9-4_27_12_2022
+Исправлено поведение аварий датчика ЗУ.
+Добавлены значения масок аварий по умолчанию.
+
+n9-5_28_12_2022
+Исправлено отображение в регистрах состояния дискретных выходов.
+Добавлена тестовая команда для управления флагами наличия новых настроек (Status bit1, bit2).
+01 AC 00 01 00 39 - команда разрешает установку флагов,
+01 AC 00 00 c1 f9 - команда блокирует установку флагов.
+По умолчанию флаги не устанавливаются (блокируются).
+ 
+n9-6_02_01_2023
+Исправлен переход в аварию "АК не подключен" из "Аварии АК" (касается переходов 1ПА1-1ПА5, 2ПА).
+"Авария АК" при этом переходит в память сработок.
+
+n9-7_03_01_2023
+Изменена установка для управления выходами по умолчанию:
+насос №1  - включен, "1" (6 бит в регистре №9);
+насос №2  - выключен, "0" (7 бит в регистре №9);
+МН  - включен, "1" (8 бит в регистре №9);
+Авария  - включен, "1" (9 бит в регистре №9);
+СЗО  - включен, "1" (10 бит в регистре №9);
+Клапан - выключен (11 бит в регистре №9).
+Исправлено поведение программы для ошибок линий связи.
+
+n9-8_05_01_2023
+Софт-кнопки регистра 9 включают/выключают реле.
+Клапан реботает инверсно к предыдущему варианту.
+Настройки масок выходов применяются "на лету".
+Контроль линии связи запускается после установки бита контроля.
+
+n9-9_05_11_2023
+Подключена проверка линий связи к двум внешним портам.
+Исправлен ручной режим управления реле, теперь софт-кнопка (бит) определяет состояние выхода.
+Клапан работает при каждом событии аварии из своей маски.
+Исправлены чтение/запись в 9-й регистр.
+
+n10-0_10_01_2023
+При контроле линии связи проверяется пакет на соответствие CRC. Если пакет неверный, он не учитывается.
+
+n10-1_10_01_2023
+В выходные каналы добавлен шаблон маски.
+Реализовано управление выходом реле СЗО при выключении аварии битом 5 статуса.
+Включна обработка линии связи по всем 3-м портам.
+
+n10-2_13_01_2023
+Добавлен переход на летнее/зимнее время. Весной один час добавляется к текущему времени, осенью - отнимается.
+Изменение времени происходит в 2 часа весной и в 3 часа осенью по заранее составленной таблице.
+Команда F0 выводит содержимое таблицы в порт.
+ 01 F0 00 64
+Таблица содержит 32 строки. После изменения времени на один час, строка таблицы очищается.
+Команда F2 позволяет удалять записи из таблицы при необходимости.
+ 01 F2 00 08 A1 ED
+Эта команда удаляет 8-ю запись из таблицы.
+Команда F4 позволяет записать в таблицу строку с датой для последующего изменения времени.
+ 01 F4 00 25 00 03 00 23 C8 16
+Эта команда добавляет дату 25/03/2023.
+Хочу отметить, что в регистре 11 (Date_DST) может храниться дата до 2064 года.
+Для дальнейших лет (64...99) не достаточно места (бит памяти).
+
+n10-03_16_01_2023
+В этой сборке стало возможно менять тип клапана и его маску.
+Добавлена таблица для перхода за летнее/зимнее время до 2064 года.
+
+n10-04_17_01_2023
+Исправил размер таблицы для перевода времени зима/лето.
+
+n10-5_18_01_2023
+Изменил выход клапана для "NC"-типа (всегда включен, при аварии - выключен).
+Добавлена возможность менять инициализацию клапана, теперь для клапана возможно менять тип, инициализацию и маску.
+Исправлена ошибка даты при записи событий в архив. 
+Бит перевода часов (зима/лето) ранее записывался вместе с датой. Теперь этот бит не учитывается.
+Для дальнейшей корректной работы с архивом, его нужно очистить.
+Добавлен вывод команды 0х17 в консоль для отладки.
+
+n10-6_24_01_2023
+Исправил управление клапаном по команде с кнопки.
+ 
+n10-7_26_01_2023
+Управление клапаном от кнопки для типа "NC" реализовано следующим образом:
+ - Если кнопка выключена (в регистре управления записан "0") при появлении аварии по маске, клапан активируется (выход МК переводится в "0");
+ - При пропадании аварии и выключенной кнопке (в регистре управления записан "0") клапан деактивируется.
+ - Если кнопка включена (в регистре управления записана "1") клапан всегда активен (выход МК в состоянии "0") не зависимо от аварий по маске.
+
+n10-8_03_02_2023
+ Изменены настройки портов. Порт платы индикации работает c фиксированными настройками:
+1) Скорость обмена данными – 9600 бод.
+2) Размер данных – 8 бит.
+3) Количество стоповых бит – 1.
+4) Проверка четности – нет.
+Для двух остальных портов настройки меняются через регистры.
+
+n10-9_06_02_2023
+ 1.При инициализации устройства после сброса, биты 1, 2, 14 и 15 регистра статуса сбрасываются.
+ 2.При записи "1" в 0-ой бит регистра статуса любым внешним устройством, запускается таймер на 3 секунды.
+   После окончания таймера, 0-й бит регистра статуса сбрасывается.
+ 3.Бит 14 регистра статуса сбрасывается при отсутствии корректных команд по порту 1, больше 20 секеунд.
+ 4.Бит 15 регистра статуса сбрасывается при отсутствии корректных команд по порту 2, больше 20 секеунд.
+ 5.Бит 11 регистра статуса устанавливается при появлении аварий и памяти сработок.
+
+n11-0_07_02_2023
+ Исправлена логика установки 11 бита регистра статуса.
+
+n11-1_11_02_2023
+ Реализована процедура изменения параметров внешних портов.
+ Число бит данных для портов всегда 8.
+ Новый адрес ПП380 просто записывается в регистр. Действий, в самой 380, не требуется.
+ ПП380 всегда можно почитать по адресу "0".
+ Для изменения параметров внешних портов реализована последовательность:
+ a) 382/1 записывает в регистры 71 и 72 новые параметры.
+ b) 382/1 устанавливает бит 1 регистра статуса.
+ c) внешнее устройство читает этот бит, 380 читает и запускает таймер таймаута.
+ d) внешнее устройство читает новые параметры портов и сбрасывает бит 1 статуса.
+ e) 380 читает сброшенный бит, и если не закончился таймаут, применяет новые настройки порта "на лету".
+ f) если бит не был сброшен, а таймаут закончился, возвращаются предыдущие настройки для внешних портов.
+ После сброса, биты 14 и 15 регистра статуса сбрасываются. По внешним портам, при записи в регистр статуса,
+ применяется маска 0xC800. Она позволяет записывать только 11, 14, 15 биты регистра статуса.
+ При отсутствии обмена данными через порт платы индикации более установленного времени (20 сек.),
+ биты 14 и 15 регистра статуса также сбрасываются. Поэтому, внешним устройствам, обозначенным как "свои",
+ необходимо следить за этими битами.
+ 
+n11-2_14_02_2023
+ Добавлена логика изменения собственного адреса ПП380.
+ Новый адрес ПП380, после записи в регистр, сразу не применяется. ПП380 продолжает отвечать по старому адресу.
+ Новый адрес вступит в силу после перезагрузки ПП380, либо после следующей процедуры (при условии установленного 14 бита).
+ Процедура изменения собственного адреса ПП380 для "своего" устройства выполняется так:
+ a) 382/1 записывает в регистр 70 новый адрес, ПП380 продолжает отвечать по старому адресу.
+ b) 382/1 устанавливает бит 1 регистра статуса.
+ c) внешнее устройство читает этот бит, 380 читает и запускает таймер таймаута.
+ d) внешнее устройство читает новый адрес и сбрасывает бит 1 статуса.
+ e) 380 читает сброшенный бит, и если не закончился таймаут, применяет новый адрес. Теперь ПП380 отвечает по новому адресу.
+ f) если бит не был сброшен, а таймаут закончился, ПП380 перезаписывает адрес в регистре 70 на старый 
+    и продолжает отвечать по старому адресу.
+ Для платы индикации ПИ382/1 адрес ПП380 всегда "1".
+
+n11-3_15_02_2023
+ Реализована логика определения "своих" устройств на внешних портах согласно редакции ТехЗадания от 15/02/2023.
+ Для чужих устройств, при изменении регистра статуса, применяется маска 0х2800 (11 и 13 бит разрешены).
+ Удаленное устройство устанавливает 13 бит регистра статуса (маркер-бит) для ПП380, как "своё" устройство.
+ ПП380 читает маркер-бит, отмечает порт, на котором подключено "своё" устройство и сбрасывает маркер-бит.
+ При запросе регистра статуса по порту 1, ПП380 отвечает "своему" устройству установленным 14 битом и сброшенным 15 битом.
+ При запросе регистра статуса по порту 2, ПП380 отвечает "своему" устройству установленным 15 битом и сброшенным 14 битом.
+ Плата индикации при запросе статуса, при наличии подключенных устройств, увидит установленные биты 14 и/или 15.
+ Биты 14 и 15  регистра статуса может изменить только ПП380. Для всех остальных - только чтение.
+ При необходимости чтения/изменения настроек "своих" устройств, для порта 1 выставляется бит 1 регистра статуса, 
+ для порта 2 - бит 2. 
+ Добавлена команда перезагрузки ПП380 установкой бита 6.
+
+n11-4_16_02_2023
+ 1.Исправил команду 0х17 для чтения/записи регистра статуса.
+ 2.Добавил установку битов в регистрах изменений настроек для входов (36) и выходов (59).
+ 3.При подключенных внешних "чужих" устройствах (1-го или 2-х), применение адреса и параметров порта происходит сразу.
+ 4.Добавил очистку битов 1 и 2 регистра статуса, если закончился таймаут для настроек адреса и портов.
+
+n11-5_20_02_2023
+ Доработал код. Добавил больше проверок на запись данных в регистры и обработку команд.
+
+n11-6_22_02_2023
+ Добавлена обработка битов регистра статуса входов (36) и регистра статуса выходов (59).
+ После сброса, регистры статуса входов (36) и регистра статуса выходов (59) очищаются.
+ Для "своих" устройств, при изменении названия входов/выходов и маски клапана, 
+ в регистрах устанавливаются биты, соответствующие номерам входов/выходов.
+ После считывания удаленными устройствами данных из регистров (сброса битов 1 и/или 2 регистра статуса (1)),
+ регистры статуса входов (36) и регистра статуса выходов (59) очищаются.
+
+n11-7_23_02_2023
+ 1.Добавил "защиту" от записи в регистр статуса входов (36) и регистр статуса выходов (59).
+ Теперь, если нет ни одного "своего" устройства и происходит изменение названий входов, выходов или
+ маски клапана, они сбрасываются.
+ 2.Убрал "сброс" бита присутствия "своего" устройства при синхронизации.
+ 3.Подправил последовательность инициализации новых настроек и скорости последовательного порта.
+
+n11-8_24_02_2023
+ 1.Поменял регистр статуса входов (36) и регистр статуса выходов (59) только на чтение.
+   Теперь, при записи в эти регистры нужно выдавать ошибку, потому что слово для записи и слово для чтения различны.
+   В данной сборке, при записи в регистры 36 и 59, ошибка не выдается с целью совместимости обмена данными с ПИ382.
+ 2.Изменил обработку бита присутствия для "своих" устройств при синхронизации по обеим портам.
+
+n11-9_27_02_2023
+ Изменена логика установки битов регистра статуса входов (36) и регистра статуса выходов (59).
+ Теперь биты устанавливаются при изменении названий входов, названий выходов и маски клапана
+ для всех устройств.
+ Автоматический сброс данных в регистрах 36 и 59, платой ПП380, происходит, если подключены "свои" устройства,
+ одно или два, после перехода битов 1 и 2 регистра статуса (1) из "1" в "0" (оба сброшены).
+ То есть, установкой битов 1 и/или 2 регистра статуса (1) и установленных битах 14 и/или 15 - запускается тайм-аут
+ в ПП380. Данные в регистрах 36 и 59 очищаются, если были сброшены биты 1 и 2 (оба сброшены) регистра статуса (1) или
+ по окончанию тайм-аута.
+ Если к ПП380 подключены только "чужие" устройства, и записаны данные в регистры 36 и 59, то они не очищаются ПП380.
+ 
+n12-0_02_03_2023
+ Сбрасывается бит 13 регистра статуса (1), если устройство определено как "своё".
+ Приведена в соответствие заводская установка регистра 72, значение - 1.
+ Исправлена ошибка, выключена очистка регистров 36 и 59 для "чужих" устройств.
+
+n12-1_03_03_2023
+ Добавлена обработка бита четности/нечетности настройки внешних портов.
+
+n12-2_06_03_2023
+ Процедура установки параметров портов устанавливает скорость, разрядность данных, четность/нечетность
+ и настройки стоповых бит в соответствии с данными в регистрах 71 и 72.
+ Прошивка 12-1 "зависала" от того, что ПИ382 записывает в регистр 72 неверные настройки четности/нечетности.
+ Там присутствует значение 0х0031 - это не определено. В данной сборке есть "защита" от неправильных
+ настроек, записанных в регистры. Для разрядности, стоповых бит и четности/нечетности, значение 0х03 эквивалентно
+ значению по умолчанию. Если в регистре находятся неопределенные значения, тогда при инициализации внешних портов 
+ применяются значения по умолчанию.
+
+n12-3_09_03_2023
+ Процедура установки параметров внешних портов, после получения новых параметров, проверяет соответствие настроек
+ портов и данных в регистрах. Если есть различия, инициализация внешних портов выполняется снова. 
+ Каждую следующую секунду, до тех пор, пока параметры портов и данные в регистрах не будут одинаковы.
+
+n12-4_14_03_2023
+ Исправлен порядок изменения адреса при записи событий в архив.
+ Добавлены проверки соответствия значения адреса фактическому адресному пространству EEPROM.
+
+n12-5_16_03_2023
+ Исправлена прокрутка данных в архиве.
+
+n12-6_29_03_2023
+ Добавлена задержка в 1 сек. для сигнала перенапряжения (OVP). 
+
+n12-7_29_03_2023
+ Сборка отличается от предыдущей отключением отладочных сообщений. 
+ Несколько команд для таблицы перевода часов зима/лето работают.
+ Команда F0 выводит содержимое таблицы в порт 1 (USB).
+  01 F0 00 64
+ Таблица содержит 84 строки. После изменения времени на один час, строка таблицы очищается в оперративной памяти.
+ После сброса микроконтроллера, таблица из постоянной памяти вновь перезаписывается в оперативную память.
+ Команда F2 позволяет удалять записи из таблицы оперативной памяти при необходимости.
+ Например, нужно изменить дату перевода времени. Тогда строка удаляется, а затем записывается другая дата.
+ Все изменения происходят в оперативной памяти. Если не выполнять сброс, данные будут актуальны для применения.
+  01 F2 00 08 A1 ED
+ Эта команда удаляет 8-ю запись из таблицы.
+ Команда F4 позволяет записать в таблицу строку с датой для последующего изменения времени.
+  01 F4 00 25 00 03 00 23 C8 16
+ Эта команда добавляет дату 25/03/2023 в таблицу на свободное место.
+ Хочу отметить, что в регистре 11 (Date_DST) может храниться дата до 2064 года.
+ Для дальнейших лет (64...99) не достаточно места (бит памяти).
+
+n12-8_04_04_2023
+ Данная сборка корректно работает с прошивкой "PI382_V01_03.21_1.hex".
+ Включены отладочные сообщения. 
+ В начале работы с архивом создается дамп указателей на области памяти архива.
+ При работе из меню с архивом, выводятся данные архива, сохраненные в памяти, до начала работы с архивом.
+ Вновь поступающие события об авариях сохраняются в памяти, но не видны в текущей сессии просмотра архива.
+ После выхода из меню архива и повторного входа в просмотр архива, создается очередной дамп указателей.
+ События аварий, которые записались в память во время предыдущего просмотра архива, становятся видны.
+
+n12-9_06_04_2023_(04_06)
+ Сборка отличается от предыдущей отключением отладочных сообщений. 
+
+n04-07_(07_04_2023)
+ Фиксили только установку бита 11. По событиям и памяти событий. Добавлен сброс регистров памяти аварий (DIM1, DIM2). 
+
+n04-10_(10_04_2023)
+ Исправлен сброс регистров памяти аварий (DIM1, DIM2). 
+ При сбросе бита 11 регистра статус (1) своим или чужим устройством, очищаются регистры памяти аварий (DIM1, DIM2).
+ Остальные биты регистра статус (1) остаются без изменений.
+ При сбросе бита 3 регистра статус (1) устройством ПИ382/1, также очищаются регистры памяти аварий (DIM1, DIM2).
+
+n04_12_(12_04_2023)
+ Выполнил проверку работоспособности датчика ЗУ устройства ПП380, версия ПО - 04_10.
+ Начальные условия - устройство отключено от сети и от АКБ.
+ 1.От источника питания подал 12 вольт на линию АКБ. Сетевой источник питания отключен.
+ 2.После тестирования АКБ устройство включило реле, включился дисплей ПИ382.
+   Появилась авария - нет электроенергии.
+ 3.Подключил сетевой источник питания. Авария перешла в память.
+ 4.Отключил сетевой источник. Появилась авария - нет электроенергии.
+ 5.Плавно уменьшаю напряжение на линии АКБ. При напряжении 11 вольт, появляется авария - АК разряжен.
+   Аварий становится две.
+ 6.Продолжаю уменьшать напряжение на линии АКБ. При напряжении 10,4 вольт - отключается реле.
+ Что не так работает?
+ 
+По вопросу фантомных аварий - действительно, фиксили. 
+Тогда Вы приняли решение о пороговом напряжении Uаk6 (регистр 22, AKB_Voltage_defective = 8,0 вольт).
+При проверке подается 9,2 вольта, соответственно, фантомные аварии присутствуют.
+
+В очередной сборке установлено напряжение  Uаk4	(регистр 20, AKB_Voltage_OFF = 10,5 вольт).
+
+n04_14_(14_04_2023)
+ 1.Изменен алгоритм предзаряда батареи при тестировании. В него добавлена проверка наличия электросети.
+   Теперь, во время предзаряда, при пропадании электросети, алгоритм выходит из предзаряда с ошибкой "1ПА6".
+ 2.В этой сборке изменена обработка дискретных входов. Для устранения "фантомных" аварий по ним.
+   Данные от дискретных входов обрабатываются только при включенном реле аккумулятора.
+   При выключенном реле - дискретные входы не обрабатываются.
+n04_14_1(14_04_2023)
+ При наличии электросети, без аккумулятора, работаем в штатном режиме.
+
+n04_17_(17_04_2023)
+ Для контроля состояния тестирования аккумулятора добавлен бит "batTested".
+ Смысл бита в следующем: 
+  - сбрасывается перед тестированием и при выходе в аварию;
+  - устанавливается после успешного тестирования (1ПС1, 1ПС2, 1ПС3, 1ПС4).
+ Т.е., бит установлен только при исправной аккумуляторной батарее. 
+ Этот бит и бит наличия электросети определяют работу дискретных входов.
+ При отсутствии этих 2-х бит (находятся в "0"), дискретные входы не обрабатываются.
+
+n04_20_(20_04_2023)
+ Дискретные входы, при включении, обрабатываются после установки флагов "batTested" и наличия электросети.
+
+n04_21_(21_04_2023)
+ Добавлено управление типом дискретного входа (D8) для охранной сигнализации.
+ При выборе выключенного состояния, вход настраивается как нормально открытый.
+
+n04_22_(22_04_2023)
+ Исправлена полярность дискретного входа (D8) - NO, NC. (была наоборот).
+
+n04_25_(25_04_2023)
+ Исправлено поведение алгоритма при "засыпании".
+
+n04_27_(27_04_2023)
+ Устранена ошибка последовательности проверки наличия электросети при включении.
+
+n04_28_(28_04_2023)
+ Авария "Немає електроенергіїї" и связь с Сигнал-2 (UART1 и 2) корректно работает при включении от АК (при отсутствии электросети). 
+
 
